fixed background image cropping at bottom

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,12 @@
-body {
+html {
     background-image: url(../img/partly-cloudy.jpg);
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+}
+
+body {
     color: #333333;
     display: flex;
     flex-direction: column;
